--- a/Header.css
+++ b/Header.css
@@ -1,3 +1,27 @@
-.Header > h1 {
-    color:rgb(37,147,255);
+.Header{
+    display:flex;
+    align-items: center;
+
+    padding:20px 0px;
+    border-bottom: 1px solid rgb(226,226,226);
+}
+
+.Header div{
+    display: flex;
+}
+
+.Header_center{
+    width:50%;
+    font-size:25px;
+    justify-content: center;
+}
+
+.Header_right{
+    width:25%;
+    justify-content: flex-end;
+}
+
+.Header_left{
+    width:25%;
+    justify-content: flex-start;
 }
